@@ -69,7 +69,7 @@ void init_options(struct ccx_s_options *options)
 	options->hardsubx = 0;		  // By default, don't try to extract hard subtitles
 	options->dvblang = NULL;	  // By default, autodetect DVB language
 	options->ocrlang = NULL;	  // By default, autodetect .traineddata file
-	options->ocr_oem = 0;		  // By default, set Tesseract OEM mode OEM_TESSERACT_ONLY (0)
+	options->ocr_oem = -1;		  // By default, OEM mode depends on the tesseract version
 	options->ocr_quantmode = 1;	  // CCExtractor's internal
 	options->mkvlang = NULL;	  // By default, all the languages are extracted
 	options->ignore_pts_jumps = 1;
