@@ -19,6 +19,7 @@
 - Fix: General code clean up / reformatting
 - Fix: Fix multiple definitions with new -fno-common default in GCC 10
 - Fix: Mac now builds reproducibly again without errors on the date command (#1230)
+- Fix: Allow all oem modes with tesseract v4 (#1264)
 - Doc: Updated ccextractor.cnf.sample.
 
 0.88 (2019-05-21)
